# asciidepths.com

./: .gitignore  README.md
server/: Cargo.toml  database.db  index.ts  package-lock.json  package.json  reserved_usernames.json  tsconfig.json
server/maps/stonestoryrpg.com/: background.txt  floor.txt  foreground.txt  highlight.txt
server/migration/src/: m20220101_000001_create_users_table.rs
server/prisma/: dev.db  schema.prisma  seed.ts
server/prisma/migrations/: migration_lock.toml
server/prisma/migrations/20241117185530_init/: migration.sql
server/prisma/migrations/20241117195544_add_password_to_user/: migration.sql
server/prisma/migrations/20241117195610_remove_default_from_user_password/: migration.sql
server/prisma/migrations/20250201152748_init_user/: migration.sql
server/prisma/migrations/20250201161523_add_encryption_key_to_user/: migration.sql
server/prisma/migrations/20250201161956_add_dates_to_user/: migration.sql
server/prisma/migrations/20250201192151_init_loations_and_pos/: migration.sql
server/routes/: validate.ts
server/socket/: disconnect.ts
server/src/: constants.rs  index.ts  main.rs  types.ts
server/src/entities/: users.rs
server/src/events/: message.ts
server/src/http/: index.rs  mod.rs
server/src/http/auth/: login.rs  (+3 more)
server/src/socket/: connect.rs  disconnect.rs  mod.rs
server/src/structs/: app_state.rs
server/src/utilises/: mod.rs  validation.rs
server/src/utilities/: hashing.rs  mod.rs  session.rs
server/src/utils/: encoder.ts  validation.ts
server/utils/: map.ts  prisma.ts  session.ts  validation.ts
(+68 files in other folders)
