[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
socketioxide = "0.16.1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors"] }
once_cell = "1.20.3"
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
dotenvy = { version = "0.15"  }
cuid2 = "0.1.4"
chrono = "0.4.39"
regex = "1.11.1"
rustrict = "0.7.33"
strsim = "0.11.1"
ahash = "0.8.11"
miku-server-timing = "0.2.0"
argon2 = "0.5"
rand_core = { version = "0.9.0", features = ["std"] }

rand = { version = "0.9.0", features = ["std"] }
hex = "0.4.2"
aes-gcm = "0.10.3"

base64 = "0.22.1"
